samples/_failures_safe/1761355963_836949_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58fd6600.c: In function ‘main’:
./samples/SAFE/__tmp_58fd6600.c:157:5: error: expected declaration or statement at end of input
  157 |     }
      |     ^
